--- a/assets/scss/_grid.scss
+++ b/assets/scss/_grid.scss
@@ -77,9 +77,10 @@
       border-bottom: 3px $gray;
       position: absolute;
       background:$gold;
-      height:100%;
       top: 0;
       left: 0;
+      bottom: 0;
+      right: 0;
       text-align:center;
       opacity:0;
       transition: all .2s ease-in-out;
